Added stylesheet and put in some dummy styles

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,2 +1,5 @@
+<head>
+  <link rel="stylesheet" href="./main.css">
+</head>
 <h1>Ian and Brian are the cofounders of Aptus</h1>
 <a href="./index.html">Home</a>
