--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
+<head>
+  <link rel="stylesheet" href="./main.css">
+</head>
 <h1>This is a test of the new webpage</h1>
 <a href="./aboutus.html">About Us</a>
