--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <h1>This is a test of the new webpage</h1>
+<h2>Hi Brian</h2>
 <a href="./aboutus.html">About Us</a>
