--- a/index.html
+++ b/index.html
@@ -2,4 +2,7 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <h1>This is a test of the new webpage</h1>
+<h2>Biography information will go here</h2>
+<h3>Ian's Biography</h3>
+<h3>Brian's Biography</h3>
 <a href="./aboutus.html">About Us</a>
