added an extra tag for fun

--- a/index.html
+++ b/index.html
@@ -5,4 +5,5 @@
 <h2>Biography information will go here</h2>
 <h3>Ian's Biography</h3>
 <h3>Brian's Biography</h3>
+<h3>a.k.a thalobzta</h3>
 <a href="./aboutus.html">About Us</a>
