Added header complete with styling

--- a/aboutus.html
+++ b/aboutus.html
@@ -1,5 +1,11 @@
 <head>
   <link rel="stylesheet" href="./main.css">
 </head>
+
+<!-- Standard header -->
+<ul>
+  <li><a href="./index.html">Home</a></li>
+  <li><a class="active" href="./aboutus.html">About Us</a></li>
+</ul>
+
 <h1>Ian and Brian are the cofounders of Aptus</h1>
-<a href="./index.html">Home</a>
