--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <head>
   <link rel="stylesheet" href="./main.css">
 </head>
+<!-- Standard header -->
+<ul>
+  <li><a class="active" href="./index.html">Home</a></li>
+  <li><a href="./aboutus.html">About Us</a></li>
+</ul>
+
 <h1>This is a test of the new webpage</h1>
 <h2>Biography information will go here</h2>
 <h3>Ian's Biography</h3>
 <h3>Brian's Biography</h3>
-<a href="./aboutus.html">About Us</a>
