Added test image in order to start designing/developing About Us page

--- a/aboutus.html
+++ b/aboutus.html
@@ -8,4 +8,16 @@
   <li><a class="active" href="./aboutus.html">About Us</a></li>
 </ul>
 
-<h1>Ian and Brian are the cofounders of Aptus</h1>
+<h2>Ian Duckworth</h2>
+  <h4>Co-Founder - Head of Development</h4>
+  <img class="standard-headshot" src="./test.png"/>
+  <p>
+    Ian Duckworth is one of the two co-founders of Aptus Studio.  He has a long held passion for sofware development and solving engineering problems.  Ian specializes in front and back-end
+    web development as well as mobile application development.  He is currently a software developer at <a href="http://www.levvel.io/">Levvel LLC</a>
+  </p>
+<h2>Brian Castano</h2>
+  <h4>Co-Founder - Head of Design</h4>
+  <img class="standard-headshot" src="./test.png"/>
+  <p>
+    Brian Castano is one of the two co-founders of Aptus Studio.  Brian has worked extensively in design.
+  </p>
