--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
   <li><a href="./aboutus.html">About Us</a></li>
 </ul>
 
-<h1>This is a test of the new webpage</h1>
-<h2>Biography information will go here</h2>
-<h3>Ian's Biography</h3>
-<h3>Brian's Biography</h3>
+<h1>Aptus Studio</h1>
+<h2>About the Company</h2>
+  <p>
+    Aptus Studio is a partnership founded by Ian Duckworth and Brian Castano focusing on designing and developing mobile applications that increase productivity or provide enjoyment for
+    our users.  Aptus Studio is headquartered in Charlotte NC.
+  </p>
+<h2>Our Vision</h3>
+  <p>
+    We see developing quality software that is useful, fun, and appealing as something we are able to do to for the people around us.  We are committed to always providing the best quality
+    software at fair pricing.
+  </p>
